--- a/src/web/test.html
+++ b/src/web/test.html
@@ -10,6 +10,7 @@
 		<script type="text/javascript" src="../js/jquery-ui-1.12.1.min.js"></script>
 		<script type="text/javascript" language="javascript" src="../js/SaxonJS-1.0.0.min.js"></script>
 		<!-- -------------------------------- -->
+		<link rel="stylesheet" type="text/css" href="../css/test.css">
 		<script type="text/javascript" language="javascript" src="../js/test.js"></script>
 		<script type="text/javascript" language="javascript" src="../js/juix-datepicker.js"></script>
 		<!-- -------------------------------- -->
